seccomp.2: Minor fix
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -615,22 +615,22 @@ install_filter(int syscall_nr, int t_arch, int f_errno)
 .\"       Are they okay? */
 .\"
     struct sock_filter filter[] = {
-        /* [0] Load architecture from seccomp_data buffer into
+        /* [0] Load architecture from 'seccomp_data' buffer into
                accumulator */
         BPF_STMT(BPF_LD + BPF_W + BPF_ABS,
                  (offsetof(struct seccomp_data, arch))),
 
         /* [1] Jump forward 4 instructions if architecture does not
-               match t_arch */
+               match 't_arch' */
         BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, t_arch, 0, 4),
 
-        /* [2] Load system call number from seccomp_data buffer into
+        /* [2] Load system call number from 'seccomp_data' buffer into
                accumulator */
         BPF_STMT(BPF_LD + BPF_W + BPF_ABS,
                  (offsetof(struct seccomp_data, nr))),
 
         /* [3] Jump forward 1 instruction if system call number
-               does not match syscall_nr */
+               does not match 'syscall_nr' */
         BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, syscall_nr, 0, 1),
 
         /* [4] Matching architecture and system call: don't execute
