seccomp.2: srcfx: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -490,6 +490,8 @@ addressing mode modifier yields an immediate mode operand
 whose value is the size of the
 .IR seccomp_data
 buffer.
+.\" FIXME Any other seccomp-specific BPF details that should be added here?
+.\"
 .\" FIXME End of new subsection for review }}}
 .SH EXAMPLE
 The program below accepts four or more arguments.
