--- a/man3/setenv.3
+++ b/man3/setenv.3
@@ -125,6 +125,19 @@ or contains an \(aq=\(aq character.
 .TP
 .B ENOMEM
 Insufficient memory to add a new variable to the environment.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR setenv (),
+.BR unsetenv ()
+T}	Thread safety	MT-Unsafe const:env
+.TE
 .SH CONFORMING TO
 4.3BSD, POSIX.1-2001.
 .SH NOTES
