--- a/man3/putenv.3
+++ b/man3/putenv.3
@@ -76,6 +76,18 @@ is set to indicate the cause.
 .TP
 .B ENOMEM
 Insufficient space to allocate new environment.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR putenv ()
+T}	Thread safety	MT-Unsafe const:env
+.TE
 .SH CONFORMING TO
 SVr4, POSIX.1-2001, 4.3BSD.
 .SH NOTES
