cabs.3: ATTRIBUTES: Note functions that are thread-safe
The function cabs(), cabsf() and cabsl() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/cabs.3
+++ b/man3/cabs.3
@@ -25,6 +25,20 @@ function returns the absolute value of the complex number
 The result is a real number.
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR cabs (),
+.BR cabsf (),
+.BR cabsl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99.
 .SH NOTES
