exp.3: ATTRIBUTES: Note functions that are thread-safe
The function exp(), expf() and expl() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/exp.3
+++ b/man3/exp.3
@@ -125,6 +125,20 @@ is set to
 An underflow floating-point exception
 .RB ( FE_UNDERFLOW )
 is raised.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR exp (),
+.BR expf (),
+.BR expl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
