j0.3: ATTRIBUTES: Note functions that are thread-safe
The function j0(), j1f() jnl() and so on are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/j0.3
+++ b/man3/j0.3
@@ -154,6 +154,30 @@ These functions do not raise exceptions for
 .\" FIXME . Is it intentional that these functions do not raise exceptions?
 .\" e.g., j0(1.5e16)
 .\" Bug raised: http://sources.redhat.com/bugzilla/show_bug.cgi?id=6805
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR j0 (),
+.BR j0f (),
+.BR j0l ()
+T}	Thread safety	MT-Safe
+T{
+.BR j1 (),
+.BR j1f (),
+.BR j1l ()
+T}	Thread safety	MT-Safe
+T{
+.BR jn (),
+.BR jnf (),
+.BR jnl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 The functions returning
 .I double
