exp10.3: ATTRIBUTES: Note functions that are thread-safe
Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/exp10.3
+++ b/man3/exp10.3
@@ -72,6 +72,20 @@ For a discussion of the errors that can occur for these functions, see
 .BR exp (3).
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR exp10 (),
+.BR exp10f (),
+.BR exp10l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 These functions are GNU extensions.
 .SH BUGS
