--- a/man3/scalb.3
+++ b/man3/scalb.3
@@ -174,6 +174,20 @@ These functions do not set
 .\" FIXME . Is it intentional that these functions do not set errno?
 .\" Bug raised: http://sources.redhat.com/bugzilla/show_bug.cgi?id=6803
 .\" Bug raised: http://sources.redhat.com/bugzilla/show_bug.cgi?id=6804
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR scalb (),
+.BR scalbf (),
+.BR scalbl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 .BR scalb ()
 is specified in POSIX.1-2001, but marked obsolescent.
