addseverity.3: ATTRIBUTES: Note function is thread-safe
The function addseverity() is thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/addseverity.3
+++ b/man3/addseverity.3
@@ -57,6 +57,18 @@ nonexistent or default severity class.
 .SH VERSIONS
 .BR addseverity ()
 is provided in glibc since version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR addseverity ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This function is not specified in the X/Open Portability Guide
 although the
