malloc.3: ATTRIBUTES: Note functions that are thread-safe
The function malloc(), free(), calloc() and realloc() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/malloc.3
+++ b/man3/malloc.3
@@ -168,6 +168,21 @@ is returned.
 If
 .BR realloc ()
 fails, the original block is left untouched; it is not freed or moved.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw38 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR malloc (),
+.BR free (),
+.BR calloc (),
+.BR realloc ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C89, C99.
 .SH NOTES
