--- a/man3/confstr.3
+++ b/man3/confstr.3
@@ -125,6 +125,18 @@ is set to
 The value of
 .I name
 is invalid.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lb lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR confstr ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 POSIX.1-2001.
 .SH EXAMPLE
