memfd_create.2: srcfix: start new sentences on new lines; rewrap source lines
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -26,12 +26,14 @@ memfd_create \- create an anonymous file
 .BI "int memfd_create(const char *" name ", unsigned int " flags ");"
 .SH DESCRIPTION
 .BR memfd_create ()
-creates an anonymous file and returns a file-descriptor to it. The file behaves
-like regular files, thus can be modified, truncated, memory-mapped and more.
+creates an anonymous file and returns a file-descriptor to it.
+The file behaves like regular files, thus can be modified,
+truncated, memory-mapped and more.
 However, unlike regular files it lives in main memory and has a volatile
-backing storage. Once all references to the file are dropped, it is
-automatically released. Anonymous memory is used for all backing pages of the
-file. Therefore, they are subject to the same restrictions as other anonymous
+backing storage.
+Once all references to the file are dropped, it is automatically released.
+Anonymous memory is used for all backing pages of the file.
+Therefore, they are subject to the same restrictions as other anonymous
 memory allocations like
 .BR mmap (2)
 with
@@ -43,9 +45,9 @@ is used as internal file-name and will occur as such in
 .IR /proc/self/fd/ .
 The name is always prefixed with
 .BR memfd:
-and serves only debugging purposes. Names do not affect the behavior of the
-memfd, and as such multiple files can have the same name without any side
-effects.
+and serves only debugging purposes.
+Names do not affect the behavior of the memfd,
+and as such multiple files can have the same name without any side effects.
 
 The following values may be bitwise ORed in
 .IR flags
@@ -60,7 +62,8 @@ See the description of the
 .B O_CLOEXEC
 flag in
 .BR open (2)
-for reasons why this may be useful. Furthermore,
+for reasons why this may be useful.
+Furthermore,
 .B O_LARGEFILE
 is always set for memfds.
 .TP
@@ -71,8 +74,9 @@ with
 .B F_ADD_SEALS
 and
 .BR F_GET_SEALS )
-on this file. The initial set of seals is empty. If this flag is not set, the
-initial set of seals will be
+on this file.
+The initial set of seals is empty.
+If this flag is not set, the initial set of seals will be
 .B F_SEAL_SEAL
 and as such no other seals can be set on the file.
 .PP
@@ -107,8 +111,7 @@ An unsupported value was specified in one of the arguments.
 The per-process limit on open file descriptors has been reached.
 .TP
 .B ENFILE
-The system-wide limit on the total number of open files has been
-reached.
+The system-wide limit on the total number of open files has been reached.
 .TP
 .B EFAULT
 The name given in
