--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1413,7 +1413,7 @@ Return (as the function result) the current set of seals
 of the inode referred to by
 .IR fd .
 If no seals are set, 0 is returned.
-If the file does not support sealing, -1 is returned and
+If the file does not support sealing, \-1 is returned and
 .I errno
 is set to
 .BR EINVAL .
