mmap.2, shmget.2, shm_open.3: SEE ALSO: add memfd_create(2)
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/mmap.2
+++ b/man2/mmap.2
@@ -710,6 +710,7 @@ main(int argc, char *argv[])
 .fi
 .SH SEE ALSO
 .BR getpagesize (2),
+.BR memfd_create (2),
 .BR mincore (2),
 .BR mlock (2),
 .BR mmap2 (2),
