memfd_create.2: Expand explanation of the EINVAL error
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/memfd_create.2
+++ b/man2/memfd_create.2
@@ -141,7 +141,11 @@ The address in
 points to invalid memory.
 .TP
 .B EINVAL
-An unsupported value was specified in one of the arguments.
+An unsupported value was specified in one of the arguments:
+.I flags
+included unknown bits, or
+.I name
+was too long.
 .TP
 .B EMFILE
 The per-process limit on open file descriptors has been reached.
