fcntl.2: Reformat EINVAL error text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1515,12 +1515,18 @@ The value specified in
 is not recognized by this kernel.
 .TP
 .B EINVAL
-For
-.BR F_DUPFD ,
+.I cmd
+is
+.BR F_DUPFD
+and
 .I arg
 is negative or is greater than the maximum allowable value.
-For
-.BR F_SETSIG ,
+.TP
+.B EINVAL
+.I cmd
+is
+.BR F_SETSIG
+and
 .I arg
 is not an allowable signal number.
 .TP
