fcntl.2: Add EINVAL error F_SET_SEALS
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/fcntl.2
+++ b/man2/fcntl.2
@@ -1513,6 +1513,18 @@ NFS), but can sometimes happen locally.
 The value specified in
 .I cmd
 is not recognized by this kernel.
+.\" FIXME I added the following error case. Is it correct?
+.TP
+.B EINVAL
+.I cmd
+is
+.BR F_ADD_SEALS
+and
+.I arg
+includes an unrecognized sealing bit or
+the filesystem containing the inode referred to by
+.I fd
+does not support sealing.
 .TP
 .B EINVAL
 .I cmd
